# deep-lambda

./: .gitignore  README.md
docs/: flight_guard_ai.md  hardware_firmware.md
firmware/: Cargo.toml  firmware.rs
firmware/src/: crypto.rs  handshake.rs  identity.rs  lib.rs  node.rs  packets.rs  radio.rs
flight_guard_ai/: crypto.py  handshake.py  identity.py  node.py  packets.py  relay.py
