[package]
name = "flight_guard_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
x25519-dalek = { version = "2", default-features = false, features = ["alloc", "precomputed-tables", "zeroize", "static_secrets"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "heapless"] }
blake3 = { version = "1", default-features = false }
heapless = "0.7"
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false }
panic-halt = "0.2"
